Random preference lists with cap lists for many-to-one

--- a/random_prefs.ipynb
+++ b/random_prefs.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:36ee6c6e385941d759e2bc83f721b37e1fec236da2564f1cd82b3f2a99cc9cda"
+  "signature": "sha256:45dff5e89a7278b3b0536550dcc843512836fd9f0d0c4f0bbd1e1ac7cda7c308"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,10 +55,10 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "array([[2, 3, 0, 1],\n",
+        "array([[2, 0, 1, 3],\n",
         "       [2, 1, 3, 0],\n",
-        "       [2, 1, 3, 0],\n",
-        "       [1, 3, 0, 2]])"
+        "       [1, 2, 0, 3],\n",
+        "       [1, 2, 3, 0]])"
        ]
       }
      ],
@@ -78,9 +78,9 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "array([[1, 0, 3, 4, 2],\n",
-        "       [1, 0, 3, 4, 2],\n",
-        "       [3, 1, 0, 2, 4]])"
+        "array([[3, 1, 2, 4, 0],\n",
+        "       [0, 3, 2, 4, 1],\n",
+        "       [3, 2, 0, 1, 4]])"
        ]
       }
      ],
@@ -111,10 +111,10 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "array([[0, 2, 1, 3],\n",
-        "       [1, 0, 2, 3],\n",
-        "       [0, 1, 2, 3],\n",
-        "       [0, 1, 2, 3]])"
+        "array([[2, 1, 0, 3],\n",
+        "       [0, 2, 1, 3],\n",
+        "       [2, 0, 1, 3],\n",
+        "       [1, 0, 2, 3]])"
        ]
       }
      ],
@@ -136,11 +136,163 @@
        "text": [
         "array([[3, 0, 1, 2, 4],\n",
         "       [0, 2, 3, 1, 4],\n",
-        "       [2, 3, 0, 1, 4]])"
+        "       [0, 3, 1, 2, 4]])"
        ]
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s_prefs, c_prefs, caps = random_prefs(4, 3, return_caps=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s_prefs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "array([[2, 1, 0, 3],\n",
+        "       [1, 2, 3, 0],\n",
+        "       [2, 3, 0, 1],\n",
+        "       [2, 3, 0, 1]])"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "c_prefs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "array([[3, 1, 2, 0, 4],\n",
+        "       [0, 2, 1, 4, 3],\n",
+        "       [3, 1, 4, 0, 2]])"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "caps"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "array([1, 3, 1])"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s_prefs, c_prefs, caps = random_prefs(4, 3, allow_unmatched=False, return_caps=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s_prefs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "array([[0, 2, 1, 3],\n",
+        "       [0, 2, 1, 3],\n",
+        "       [2, 0, 1, 3],\n",
+        "       [0, 2, 1, 3]])"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "c_prefs"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "array([[1, 2, 3, 0, 4],\n",
+        "       [1, 3, 2, 0, 4],\n",
+        "       [0, 3, 2, 1, 4]])"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "caps"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "array([1, 2, 2])"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
